--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@typechain/hardhat": "^6.1.2",
     "@types/chai": "^4.2.0",
     "@types/mocha": ">=9.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "bufferutil": "^4.0.7",
     "chai": "^4.2.0",
     "eslint": "8.39.0",
     "eslint-config-next": "13.3.0",
@@ -30,9 +32,12 @@
     "next": "13.2.4",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "solc": "^0.8.19",
+    "solc-loader": "^1.1.1",
     "solidity-coverage": "^0.8.1",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
-    "typescript": ">=4.5.0"
+    "typescript": ">=4.5.0",
+    "utf-8-validate": "^6.0.3"
   }
 }
