--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bufferutil": "^4.0.7",
     "chai": "^4.2.0",
-    "eslint": "8.39.0",
+    "eslint": "^8.39.0",
     "eslint-config-next": "13.3.0",
     "ethers": "5.4",
     "hardhat": "^2.14.0",
