--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "hardhat": "^2.14.0",
     "hardhat-gas-reporter": "^1.0.8",
     "next": "13.2.4",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "solc": "^0.8.19",
     "solc-loader": "^1.1.1",
     "solidity-coverage": "^0.8.1",
+    "styled-components": "^5.3.10",
     "ts-node": ">=8.0.0",
     "typechain": "^8.1.0",
     "typescript": ">=4.5.0",
