--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-router-dom": "^6.11.0",
     "solc": "^0.8.19",
     "solc-loader": "^1.1.1",
     "solidity-coverage": "^0.8.1",
